# snake-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: release.yml
docs/: current-playfield.md  how-it-works.md
src/: game.cpp  game.hpp  input.hpp  main.cpp  types.hpp
src/qt/: game_widget.cpp  game_widget.hpp  qt_input.cpp  qt_input.hpp
